checker/tests/parsing/errors/union_trailing_pipe.mft
type T {
  f: A |;
}
=== error ===
Unrecognized token `;` found at 17:18
Expected one of "field reference", "identifier", "string literal" or "variable"